fix spacing and alignment of footer

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -133,7 +133,9 @@ body {
         font-size: 75%;
 
         > p {
-            @include mixin.padding-x( 3rem );
+            @include mixin.padding-x( 1rem );
+
+            text-align: right;
         }
     }
 }
